$Id$

2014-08-15  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp:
	- Migrated to the new interface
	- Added multisector support
	- Fixed smart autosave processing

2014-07-26  Christian Franke  <franke@computer.org>

	smartmontools 6.3

2014-07-25  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apple SD/SM/TS...E/F SSDs: Rename, add TS*[EF]
	- JMicron based SSDs: Fix regex for Apple TS*C
	- Marvell based SanDisk SSDs: X210

2014-07-25  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: Apple SM* SSD - add attribute 173 description (guessed)

2014-07-23  Christian Franke  <franke@computer.org>

	ataprint.cpp: Print SCT Status regardless of SCT Data Table support.
	atacmds.cpp: ataReadSCTTempHist(): Do not reread initial SCT Status.
	configure.ac: Fix typo in help text.  Add MinGW comment.

2014-07-22  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apple SD/SM...E/F SSDs (ticket #342)
	- Apple SSD SM128, Asus-Phison SSD: Remove (missing attribute info)

2014-07-20  Christian Franke  <franke@computer.org>

	atacmds.cpp: Rework heuristics for 'tempminmax' format.
	Now supports negative values (ticket #291) and WDC over temperature
	counter.
	Change default for Head_Flying_Hours to 'raw24(raw8)'.  This provides
	more reasonable output for Seagate HDDs missing in drivedb.h.
	drivedb.h: Comment new default for Head_Flying_Hours.
	smartctl.8.in, smartd.8.in, smartd.conf.5.in:
	Fix usage of line breaks and empty lines.

2014-07-19  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in, update-smart-drivedb.8.in:
	Add FILES section.  Move FULL PATH info to FILES section.
	Rename REFERENCES section.  Move HOME PAGE info to REFERENCES section.
	Remove AUTHORS section from smartd.conf man page.
	Update or remove various outdated info.

2014-07-18  Christian Franke  <franke@computer.org>

	configure.ac: Use 'email' instead of 'mail' on Cygwin.
	Remove outdated '-mno-cygwin' error check.